# codellama-compress

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  evaluate.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
docs/: architecture.md  linux-4090.md
scripts/: export_requirements.py
src/codellama_compress/: benchmarks.py  cli.py  code_eval.py  code_exec.py  config.py  data.py  distill.py  evaluate.py  export.py  finetune.py  io.py  prune.py  quantize_awq.py  quantize_bnb.py  quantize_gptq.py  replay.py  reporting.py  security.py  speculative.py  training_utils.py
tests/: test_code_exec.py  test_config_load.py  test_export_bundle.py  test_replay.py  test_reporting.py  test_security.py
