[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codellama-compress"
version = "0.1.0"
description = "Compression & optimization pipeline for code LLMs (distillation + quantization)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Contributors" }]
dependencies = [
  "torch>=2.1",
  "transformers>=4.40",
  "accelerate>=0.30",
  "datasets>=2.18",
  "safetensors>=0.4",
  "tqdm>=4.66",
  "numpy>=1.24",
  "scipy>=1.11",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "black>=24.0.0",
  "pytest>=8.0.0",
]
quant = [
  "auto-gptq>=0.6.0",
  "autoawq>=0.2.0",
  "bitsandbytes>=0.41.0",
]

[project.scripts]
codellama-compress = "codellama_compress.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  # Typer's recommended CLI style uses Option() in defaults.
  "B008",
  # Optional style preference; not worth churn for public CLI signatures.
  "UP045",
  # Black is the formatter; line-length enforcement here is redundant/noisy.
  "E501",
]

[tool.black]
line-length = 100
target-version = ["py310"]

