[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codellama-compress"
version = "0.1.0"
description = "Compression & optimization pipeline for code LLMs (distillation + quantization)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Contributors" }]
dependencies = [
  "torch>=2.11.0",
  "transformers>=4.40",
  "accelerate>=0.30",
  "datasets>=4.8.4",
  "safetensors>=0.4",
  "tqdm>=4.66",
]

[project.optional-dependencies]
quant = [
  "auto-gptq>=0.6.0",
  "autoawq>=0.2.0",
  "bitsandbytes>=0.41.0",
]
eval = [
  "lm-eval[hf]>=0.4.11",
]

[project.scripts]
codellama-compress = "codellama_compress.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  # Black is the formatter; line-length enforcement here is redundant/noisy.
  "E501",
]

[tool.black]
line-length = 100
target-version = ["py310"]

