[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codellama-compress"
version = "0.1.0"
description = "Compression & optimization pipeline for code LLMs (distillation + quantization)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Contributors" }]
dependencies = [
  "torch>=2.12.0,<3",
  "transformers>=5.10.2,<6",
  "accelerate>=1.13.0,<2",
  "datasets>=5.0.0,<6",
  "safetensors>=0.7,<1",
  "tqdm>=4.68.1,<5",
]

[project.optional-dependencies]
quant = [
  "auto-gptq>=0.7.1",
  "autoawq>=0.2.9",
  "bitsandbytes>=0.49.2",
]
eval = [
  "lm-eval[hf]>=0.4.12",
]

[project.scripts]
codellama-compress = "codellama_compress.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  # Black is the formatter; line-length enforcement here is redundant/noisy.
  "E501",
]

[tool.black]
line-length = 100
target-version = ["py310"]

